--- a/app/src/main/res/layout/activity_knowledgebase.xml
+++ b/app/src/main/res/layout/activity_knowledgebase.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     tools:context=".ui.knowledgebase.KnowledgebaseActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +18,9 @@
             android:layout_height="230dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:focusableInTouchMode="true"
+            android:descendantFocusability="blocksDescendants">
 
             <ImageView
                 android:id="@+id/iv_background"
