Create Dummy temporary validation

--- a/app/src/main/res/layout/activity_kiddo_valid.xml
+++ b/app/src/main/res/layout/activity_kiddo_valid.xml
@@ -34,7 +34,7 @@
         app:layout_constraintVertical_bias="0.362" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cv_mom_pregnant"
+        android:id="@+id/cv_downto_six"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="30dp"
@@ -73,7 +73,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cv_mom_kiddo"
+        android:id="@+id/cv_upto_six"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="50dp"
@@ -82,7 +82,7 @@
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cv_mom_pregnant">
+        app:layout_constraintTop_toBottomOf="@id/cv_downto_six">
 
         <RelativeLayout
             android:layout_width="wrap_content"
