--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -222,11 +222,11 @@
 
                 <ImageView
                     android:id="@+id/iv_knowledgebase"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="35dp"
-                    android:layout_marginTop="60dp"
-                    android:src="@drawable/ic_blocks" />
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="50dp"
+                    android:src="@drawable/ic_knowledge" />
 
                 <TextView
                     android:id="@+id/tv_title_knowledgebase"
@@ -246,7 +246,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_title_knowledgebase"
                     android:layout_marginTop="5dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="30dp"
                     android:layout_alignParentEnd="true"
                     android:textSize="12sp"
                     android:fontFamily="@font/poppins_reguler"
