--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,7 +100,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:textSize="12sp"
-                android:text="Tulis Jurnal Kiddo\nAbadikan Tumbuh Kembang\nSi Buah Hati" />
+                android:text="Tulis Jurnal \nAbadikan Tumbuh Kembang\nSi Buah Hati" />
 
         </RelativeLayout>
 
@@ -273,11 +273,11 @@
 
                 <ImageView
                     android:id="@+id/iv_kia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="35dp"
+                    android:layout_width="90dp"
+                    android:layout_height="80dp"
+                    android:layout_marginStart="25dp"
                     android:layout_marginTop="60dp"
-                    android:src="@drawable/ic_blocks" />
+                    android:src="@drawable/ic_kia" />
 
                 <TextView
                     android:id="@+id/tv_title_kia"
@@ -287,7 +287,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="55dp"
+                    android:layout_marginEnd="85dp"
                     android:layout_marginTop="40dp"
                     android:text="@string/title_kia"/>
 
