Progress in authentication

--- a/app/src/main/res/layout/fragment_preg_or_no.xml
+++ b/app/src/main/res/layout/fragment_preg_or_no.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/prime"
-    tools:context=".ui.validation.PregOrNoFragment"
+    tools:context=".ui.validation.PregOrNoValidFragment"
     android:id="@+id/frag_preg_or_no">
 
     <ImageView
