--- a/app/src/main/res/layout/activity_mommy_valid.xml
+++ b/app/src/main/res/layout/activity_mommy_valid.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/prime"
+    android:id="@+id/fragment_mommy_valid"
     tools:context=".ui.validation.KiddoIdentityFragment">
+
 
     <ImageView
         android:id="@+id/iv_baby_equipment"
@@ -23,7 +25,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_bold"
         android:elevation="10dp"
-        android:text="Yuk Ibu!\n isi identitas si buah hati\n terlebih dahulu"
+        android:text="Selamat datang ibu"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -33,9 +35,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.307" />
+    <TextView
+        android:id="@+id/tv_mom_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
+        android:elevation="10dp"
+        android:text="Nama"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_desc_kiddo_identity"
+        app:layout_constraintVertical_bias="0.307" />
+    <TextView
+        android:id="@+id/tv_desc_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_medium"
+        android:elevation="10dp"
+        android:text="Yuk, lengkapi profilmu"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_mom_name"
+        app:layout_constraintVertical_bias="0.307" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cv_kiddo_identity"
+        android:id="@+id/cv_mom_valid"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="10dp"
@@ -45,32 +77,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_desc_kiddo_identity"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_desc_2"/>
     <TextView
-        android:id="@+id/tv_name_kiddo"
+        android:id="@+id/tv_age_mom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:elevation="5dp"
         android:fontFamily="@font/poppins_medium"
-        android:text="Nama Anak"
+        android:text="Berapa usia ibu?"
         android:textColor="@color/prime"
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@id/cv_kiddo_identity"
-        app:layout_constraintTop_toTopOf="@id/cv_kiddo_identity" />
+        app:layout_constraintStart_toStartOf="@id/cv_mom_valid"
+        app:layout_constraintTop_toTopOf="@id/cv_mom_valid" />
 
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/tv_name_kiddo_field"
+        android:id="@+id/tv_age_mom_field"
         android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="1dp"
         android:elevation="2dp"
         android:ellipsize="end"
         android:fontFamily="@font/poppins_reguler"
-        android:hint="Ketik nama anak"
-        android:inputType="text"
+        android:hint="Ketik usia ibu"
+        android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
         android:textSize="12dp"
@@ -79,62 +111,57 @@
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
         app:endIconMode="clear_text"
-        app:layout_constraintStart_toStartOf="@id/cv_kiddo_identity"
-        app:layout_constraintTop_toBottomOf="@id/tv_name_kiddo" />
+        app:layout_constraintStart_toStartOf="@id/cv_mom_valid"
+        app:layout_constraintTop_toBottomOf="@id/tv_age_mom" />
 
     <TextView
-        android:id="@+id/tv_gender"
+        android:id="@+id/tv_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginStart="30dp"
         android:elevation="5dp"
         android:fontFamily="@font/poppins_medium"
-        android:text="Jenis Kelamin"
+        android:text="Dimana domisili ibu?"
         android:textColor="@color/prime"
         android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="@id/cv_kiddo_identity"
-        app:layout_constraintTop_toBottomOf="@id/tv_name_kiddo_field" />
+        app:layout_constraintStart_toStartOf="@id/cv_mom_valid"
+        app:layout_constraintTop_toBottomOf="@id/tv_age_mom_field" />
 
-
-    <RadioGroup
-        android:id="@+id/rg_gender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/tv_location_field"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:elevation="5dp"
-        app:layout_constraintStart_toStartOf="@id/cv_kiddo_identity"
-        app:layout_constraintTop_toBottomOf="@id/tv_gender">
-
-        <RadioButton android:id="@+id/rb_female"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_reguler"
-            android:textColor="@color/prime_dark"
-            android:text="@string/perempuan"/>
-
-        <RadioButton android:id="@+id/rb_male"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_reguler"
-            android:textColor="@color/prime_dark"
-            android:text="@string/laki_laki"/>
-        
-    </RadioGroup>
+        android:layout_marginTop="1dp"
+        android:elevation="2dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/poppins_reguler"
+        android:hint="Ketik lokasi ibu"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/grey"
+        android:textSize="12dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+        app:endIconMode="clear_text"
+        app:layout_constraintStart_toStartOf="@id/cv_mom_valid"
+        app:layout_constraintTop_toBottomOf="@id/tv_location" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cv_kiddo_identity_button"
+        android:id="@+id/cv_mom_valid_submit"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_margin="70dp"
+        android:layout_margin="75dp"
         app:cardBackgroundColor="@color/pink_baby"
         app:cardCornerRadius="10dp"
         android:elevation="10dp"
-        app:layout_constraintEnd_toEndOf="@id/cv_kiddo_identity"
-        app:layout_constraintStart_toStartOf="@id/cv_kiddo_identity"
-        app:layout_constraintTop_toBottomOf="@id/rg_gender">
+        app:layout_constraintEnd_toEndOf="@id/cv_mom_valid"
+        app:layout_constraintStart_toStartOf="@id/cv_mom_valid"
+        app:layout_constraintTop_toBottomOf="@id/tv_location_field">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -153,5 +180,6 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
