Progress in authentication for Data Anak

--- a/app/src/main/res/layout/activity_email_register.xml
+++ b/app/src/main/res/layout/activity_email_register.xml
@@ -81,7 +81,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_reguler"
             android:hint="ketik nama depan"
-            android:inputType="textEmailAddress"
+            android:inputType="textCapWords"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
             android:textSize="12dp"
@@ -118,7 +118,7 @@
             android:ellipsize="end"
             android:fontFamily="@font/poppins_reguler"
             android:hint="type your last name"
-            android:inputType="textEmailAddress"
+            android:inputType="textCapWords"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
             android:textSize="12dp"
